【花都】床位一览卡颜色修改

--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
@@ -163,19 +163,19 @@
   padding-top: 3px;
   // background: #aaa;
   &.type-1 {
-    background: #FD815A;
+    background: #FF0000;
   }
 
   &.type-2 {
-    background: #5EC199;
+    background: #0000FF;
   }
 
   &.type-3 {
-    background: #A9BCB4;
+    background: #006400;
   }
 
   &.type-4 {
-    background: #DB83D7;
+    background: #FF00FF;
   }
 
   img {
