--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -1,4 +1,3 @@
-
 @media screen and (max-width: 1100px) {
   .bed-box {
     width: 14.28% !important;
@@ -7,6 +6,7 @@
   .bed-box:nth-of-type(7n), .bed-box:nth-of-type(7n - 1) {
     .bed-modal {
       left: -240px !important;
+
       &:after {
         right -8px !important
         left auto !important
@@ -19,25 +19,28 @@
   }
 
   .bed-box:nth-child(7n+22):nth-last-child(-n+21),
-  .bed-box:nth-child(7n+22):nth-last-child(-n+21)~.bed-box{
+  .bed-box:nth-child(7n+22):nth-last-child(-n+21) ~ .bed-box {
     .bed-modal {
       top: auto !important;
       bottom: -1px !important;
+
       &:after {
         top auto !important
         bottom: 30px !important
       }
     }
- }
+  }
 }
 
 @media screen and (min-width: 1100px) and (max-width: 1600px) {
   .bed-box {
     width: 12.5% !important;
   }
+
   .bed-box:nth-of-type(8n), .bed-box:nth-of-type(8n - 1) {
     .bed-modal {
       left: -240px !important;
+
       &:after {
         right -8px !important
         left auto !important
@@ -50,25 +53,28 @@
   }
 
   .bed-box:nth-child(8n+25):nth-last-child(-n+24),
-  .bed-box:nth-child(8n+25):nth-last-child(-n+24)~.bed-box{
+  .bed-box:nth-child(8n+25):nth-last-child(-n+24) ~ .bed-box {
     .bed-modal {
       top: auto !important;
       bottom: -1px !important;
+
       &:after {
         top auto !important
         bottom: 30px !important
       }
     }
- }
+  }
 }
 
 @media screen and (min-width: 1600px) {
   .bed-box {
     width: 11.11% !important;
   }
-  .bed-box:nth-of-type(9n),.bed-box:nth-of-type(9n - 1) {
+
+  .bed-box:nth-of-type(9n), .bed-box:nth-of-type(9n - 1) {
     .bed-modal {
       left: -240px !important;
+
       &:after {
         right -8px !important
         left auto !important
@@ -81,16 +87,17 @@
   }
 
   .bed-box:nth-child(9n+28):nth-last-child(-n+27),
-  .bed-box:nth-child(9n+28):nth-last-child(-n+27)~.bed-box{
+  .bed-box:nth-child(9n+28):nth-last-child(-n+27) ~ .bed-box {
     .bed-modal {
       top: auto !important;
       bottom: -1px !important;
+
       &:after {
         top auto !important
         bottom: 30px !important
       }
     }
- }
+  }
 }
 
 .bed-box
@@ -99,28 +106,34 @@
   padding 5px
   box-sizing: border-box
   cursor pointer
+
   .bed-box-inner
     position relative
-    background:rgba(255,255,255,1) ;
-    border-radius:2px;
-    border:1px solid #CBD5DD;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 2px;
+    border: 1px solid #CBD5DD;
     height 100%
-    box-shadow:0px 2px 4px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+
     &.infectFlag {
       background: #E6D8F9;
     }
+
     &.bornFlag {
       background: #D1EDD6;
     }
+
     .part-1
       height 25%
       padding: 0 14px
       display: flex
       align-items: center
+
       .bed-label
         font-size: 17px;
-        font-weight:bold;
-        color:rgba(51,51,51,1);
+        font-weight: bold;
+        color: rgba(51, 51, 51, 1);
+
     .part-2
       height 25%
       font-size 17px
@@ -129,51 +142,58 @@
       justify-content: center
       align-items: center
       font-weight bold;
-      >div
+
+      > div
         overflow hidden
         text-overflow: ellipsis
         white-space nowrap
+
     .part-3
       height 25%
       display flex
       justify-content: center
       align-items: center
       font-size: 13px;
-      color:rgba(104,113,121,1);
+      color: rgba(104, 113, 121, 1);
+
     .part-4
-       height 25%
-       border-top: 1px solid #ccc;
-       display: flex
-       align-items: center
-       padding 0 5px
-       .table-name
-          background: #FF263C;
-          border-radius: 2px;
-          width 18px
-          height 17px;
-          margin-left 4px
-          font-size: 12px;
-          color: #000;
-          text-align: center
-          line-height 17px
-          cursor pointer
-          border: 1px solid #666
-          white-space: nowrap
+      height 25%
+      border-top: 1px solid #ccc;
+      display: flex
+      align-items: center
+      padding 0 5px
+
+      .table-name
+        background: #FF263C;
+        border-radius: 2px;
+        width 18px
+        height 17px;
+        margin-left 4px
+        font-size: 12px;
+        color: #000;
+        text-align: center
+        line-height 17px
+        cursor pointer
+        border: 1px solid #666
+        white-space: nowrap
+
 .null-bed
   height 100%
   position relative
   display flex
   justify-content: center
   align-items: center
+
   img
     width 60%
+
   .null-bedLabel
     position absolute
     top 5px
     left 10px
-    font-size:20px;
-    font-weight:bold;
-    color:rgba(51,51,51,1);
+    font-size: 20px;
+    font-weight: bold;
+    color: rgba(51, 51, 51, 1);
 
 .label-con
   position absolute
@@ -181,6 +201,7 @@
   right 5px
   display: flex
   flex-direction: row-reverse
+
   .label-box
     width 18px
     height 18px
@@ -197,69 +218,89 @@
     border-radius: 0 0 3px 3px
     border: 1px solid #666
     border-top: 0
- .bed-modal
-    width:240px;
-    min-height:300px;
-    background:rgba(255,248,177,1);
-    border:1px solid #A9A9A9;
+
+
+.patient-icon
+  width 18px
+  height 18px
+  position absolute
+  top 10px
+  right 50px;
+
+.bed-modal
+  width: 240px;
+  min-height: 300px;
+  background: rgba(255, 248, 177, 1);
+  border: 1px solid #A9A9A9;
+  position absolute
+  top -1px
+  right -240px;
+  z-index 1000
+  display none
+  box-sizing: border-box
+  padding 13px
+
+  &:after
+    width 14px
+    height 14px
     position absolute
-    top -1px
-    right -240px;
-    z-index 1000
-    display none
-    box-sizing: border-box
-    padding 13px
-    &:after
-      width 14px
-      height 14px
-      position absolute
-      top: 30px
-      left -8px;
-      background:rgba(255,248,177,1);
-      border-left: 1px solid #A9A9A9;
-      border-bottom: 1px solid #A9A9A9;
-      content: '';
-      transform: rotate(45deg)
-    &:hover
-      display none !important
-    .key
-      font-size:12px;
-      color: #000
-      line-height 14px
-    .value
-      font-size 12px;
-      color:rgba(40,79,194,1);
-      line-height 14px
+    top: 30px
+    left -8px;
+    background: rgba(255, 248, 177, 1);
+    border-left: 1px solid #A9A9A9;
+    border-bottom: 1px solid #A9A9A9;
+    content: '';
+    transform: rotate(45deg)
+
+  &:hover
+    display none !important
+
+  .key
+    font-size: 12px;
+    color: #000
+    line-height 14px
+
+  .value
+    font-size 12px;
+    color: rgba(40, 79, 194, 1);
+    line-height 14px
+
 .bed-box-inner:hover .bed-modal
   display: block
+
 .table-line
   margin-bottom 6px;
 
 .xinru
   position absolute;
   top: 0;
-  left:0;
+  left: 0;
   width 0;
   height 0;
-  border-width:20px 20px 0 0;
-  border-style:solid;
-  border-color:transparent transparent;
+  border-width: 20px 20px 0 0;
+  border-style: solid;
+  border-color: transparent transparent;
+
   &.type-1
-    border-color:rgb(255,0,0) transparent !important;
+    border-color: rgb(255, 0, 0) transparent !important;
+
   &.type-2
-    border-color:rgb(255,255,0) transparent !important;
+    border-color: rgb(255, 255, 0) transparent !important;
+
   &.type-3
-    border-color:rgb(0,255,0) transparent !important;
+    border-color: rgb(0, 255, 0) transparent !important;
+
   &.type-4
-    border-color:rgb(255, 192, 203) transparent !important;
+    border-color: rgb(255, 192, 203) transparent !important;
+
 .gl
   position absolute
-  width:30px;
-  height:16px;
-  background:rgba(255,255,255,1);
-  border-radius:9px;
-  border:1px solid
-  right:2px
+  width: 30px;
+  height: 16px;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 9px;
+  border: 1px solid
+  right: 2px
   top 20px
   font-size 12px
   display flex;
@@ -274,6 +315,7 @@
   margin-left: 5px
   border-radius: 50%
   position relative
+
   &:after
     content: ''
     position absolute
@@ -285,10 +327,13 @@
     bottom: 0
     left 0
     margin: auto
+
   &.red:after
     background: #E62C2C
+
   &.green:after
     background: #27A45E
+
 .deptLend
   position absolute
   top 2px
