花都通用护理记录单加出入量统计分割线

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -198,10 +198,7 @@
       }
     }
     &.redTop{
-      // border-top:  2px solid red
-      &:nth-of-type(1) {
-        border-top:2px solid red;
-      }
+      border-top:  2px solid red
     }
 
     &.selectedTr {
