花都需求修改完善

--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
@@ -160,9 +160,9 @@
     <div flex="" class="table-line">
       <div class="key">过敏史：</div>
       <div class="value" flex-box="1" style="width: 0; color: #FE0000">
-        <span v-if="data.allergy1">食物过敏:{{ data.allergy1 }};</span>
-        <span v-if="data.drugGms">药物过敏:{{ data.drugGms  }};</span>
-        <span v-if="data.allergy2">其他过敏:{{ data.allergy2}}</span>
+        <span v-if="data.allergy1">{{ data.allergy1 }};</span>
+        <span v-if="data.drugGms">{{ data.drugGms  }};</span>
+        <span v-if="data.allergy2">{{ data.allergy2}}</span>
         <span v-else>无</span>
 
       </div>
