厚街护嘱单模板特殊处理

--- a/src/Page/sheet-nursing-order/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-nursing-order/components/sheetTable/components/excel/style.styl
@@ -144,3 +144,33 @@ td[datakey="signerNo2"] {
 td[datakey="signName2"] {
   display table-cell !important
 }
+td[datakey="signerNo3"] {
+  display: none !important
+}
+td[datakey="signName3"] {
+  display table-cell !important
+}
+td[datakey="signerNo4"] {
+  display: none !important
+}
+td[datakey="signName4"] {
+  display table-cell !important
+}
+td[datakey="signerNo5"] {
+  display: none !important
+}
+td[datakey="signName5"] {
+  display table-cell !important
+}
+td[datakey="signerNo6"] {
+  display: none !important
+}
+td[datakey="signName6"] {
+  display table-cell !important
+}
+td[datakey="signerNo7"] {
+  display: none !important
+}
+td[datakey="signName7"] {
+  display table-cell !important
+}
