聊城二院修改床位一览卡头像-区分男女

--- a/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
@@ -64,8 +64,8 @@
                       'type-3': data.nursingClass == '三级护理',
                       'type-4': data.nursingClass == '特级护理'
                       }">
-          <img v-if="data.sex==='女'" src="./images/女士默认头像.png" height="46" width="46" />
-          <img v-if="data.sex==='男'" src="./images/男默认头像.png" height="46" width="46" />
+          <img v-if="data.sex==='女'" src="./images/女.png" height="46" width="46" />
+          <img v-if="data.sex==='男'" src="./images/男.png" height="46" width="46" />
           <p>
             <!-- {{data.nursingClass.substring(0, 2)}} -->
             <span style="font-size: 18px;font-weight: bold;"
