--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -106,6 +106,27 @@
   padding 5px
   box-sizing: border-box
   cursor pointer
+  position: relative;
+
+  .like {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 0;
+    top: 8px;
+    vertical-align: top;
+    font-size: 14px;
+    color: #687179;
+    z-index: 1;
+
+    img {
+      width: 18px;
+      height: 18px;
+      position: relative;
+      top: 4px;
+      margin-right: 5px;
+    }
+  }
 
   .bed-box-inner
     position relative
