--- a/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
@@ -58,12 +58,7 @@
           </div>
           <div class="right-icon"></div>
         </el-row>
-        <div class="user-img" :class="{
-                      'type-1': data.nursingClass == '一级护理',
-                      'type-2': data.nursingClass == '二级护理',
-                      'type-3': data.nursingClass == '三级护理',
-                      'type-4': data.nursingClass == '特级护理'
-                      }">
+        <div class="user-img" :style="{ backgroundColor: data.nursingClassColor }">
           <img v-if="data.sex==='女'" src="./images/女.png" height="46" width="46" />
           <img v-if="data.sex==='男'" src="./images/男.png" height="46" width="46" />
           <p>
