✨ feat(): 【贵州人医】通用记录单在加一个按钮同步巡视的内容到记录单

--- a/src/Page/sheet-page/components/sheet-tool/tool.styl
+++ b/src/Page/sheet-page/components/sheet-tool/tool.styl
@@ -14,9 +14,10 @@
     background: #FFFFFF;
     border: 1px solid #CBD5DD;
     border-radius: 2px;
-    width 70px
+    min-width 60px
     height 26px
     margin-left 5px
+    padding 0 5px
     >>> .el-input__icon
       pointer-events: none
     &.disabled
