🐞 fix(): 【东莞横沥】记录单-主管护士签名显示

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -230,23 +230,23 @@
     .zg-name {
       position: absolute;
       left: 50px;
+      top: -10px;
       height: 30px;
-      bottom: -12px;
+      display: flex;
+      align-items: center;
       .sign-img-con {
-        display: inline-block;
         width: 70px;
         height: 30px;
         font-size: 12px;
         margin-right: 14px;
-        margin-top: -2px;
         cursor: pointer;
+        display: flex;
+        align-items: center;
         .head-sign-text {
           height: 28px;
           line-height: 28px;
         }
         .head-sign-img {
-          transform: translate(-1px, 10px);
-          margin-top: -30px;
           display: none;
           height: 30px;
           line-height: 30px;
