【曲周】重症护理记录单效果添加

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -200,6 +200,9 @@
     &.redTop{
       border-top:  2px solid red
     }
+    &.blackTop{
+      border-top:  2px solid #000
+    }
 
     &.selectedTr {
       td {
