【花都】副页行高

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -79,6 +79,17 @@
       top: 1px;
     }
 
+    .maxHeight56 {
+      overflow: hidden;
+      line-height: 56px;
+      height: 100% !important;
+      width: 100% !important;
+      max-height: 56px;
+      resize: none;
+      position: relative;
+      top: 1px;
+    }
+
     input, textarea {
       width: calc(100% - 2px);
       border: 0 !important;
