--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -11,6 +11,7 @@
     font-size: 14px !important;
   }
   .sheet-table {
+    margin: 15px auto !important;
     border-collapse: collapse;
     margin: 15px 0px;
     font-size: 12px;
