--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -231,7 +231,7 @@
     font-size: 12px;
     color: #000;
     text-align: center;
-    margin: 10px 0 0;
+    margin: 10px 0;
     position: relative;
 
     .sh-name {
