--- a/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
@@ -46,7 +46,7 @@
             </span>
           </div>
           <div flex-box="1" flex="dir:right" style="width: 0">
-            <div v-if="HOSPITAL_ID != 'beihairenyi'" class="table-name" v-for="item in (data.conditionIconDtos &&  data.conditionIconDtos.slice(0,6))"
+            <div class="table-name" v-for="item in (data.conditionIconDtos &&  data.conditionIconDtos.slice(0,6))"
               :key="item.iconText" :title="item.iconText" :style="{background: item.iconTextRgb}">
               <span>{{item.showContent}}</span>
             </div>
@@ -75,7 +75,7 @@
     </div>
   </span>
   <div class="bed-modal">
-    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu'">
+    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu'||HOSPITAL_ID == 'beihairenyi'">
       <div class="key">床号：</div>
       <div class="value" style="width: 70px;">{{ data.bedLabel }}</div>
       <div class="key">住院号：</div>
