【聊城二院】  护理记录单增加底部签名（完成），血糖表弹窗取消（打印没有数据回显）

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -241,6 +241,10 @@
       display: flex;
       align-items: center;
       min-height: 30px;
+      
+    }
+    .sh-time{
+      right: -130px;
     }
     .zg-name {
       position: absolute;
