--- a/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-lcey/bed-item.html
@@ -19,7 +19,11 @@
             <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病重'">病重</span>
             <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病危'">病危</span>
           </div>
-          <div class="info">
+          <div class="info" v-if="HOSPITAL_ID == 'beihairenyi'">
+            {{data.sex}} | {{data.age}} | {{data.inpNo}} | {{data.chargeType
+            || '--'}}
+          </div>
+          <div class="info" v-else>
             {{data.sex}} | {{data.age}} | {{data.patientId}} | {{data.chargeType
             || '--'}}
           </div>
@@ -75,7 +79,13 @@
     </div>
   </span>
   <div class="bed-modal">
-    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu'|| HOSPITAL_ID == 'beihairenyi'">
+    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'beihairenyi'">
+      <div class="key">床号：</div>
+      <div class="value" style="width: 70px;">{{ data.bedLabel }}</div>
+      <div class="key">住院号：</div>
+      <div class="value">{{ data.inpNo }}</div>
+    </div>
+    <div flex="" class="table-line" v-else-if="HOSPITAL_ID == 'huadu'">
       <div class="key">床号：</div>
       <div class="value" style="width: 70px;">{{ data.bedLabel }}</div>
       <div class="key">住院号：</div>
@@ -93,11 +103,17 @@
       <div class="key">性&nbsp;别：</div>
       <div class="value">{{ data.sex }}</div>
     </div>
-    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu' || HOSPITAL_ID == 'beihairenyi'">
+    <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu'">
       <div class="key">年龄：</div>
       <div class="value" style="width: 70px;">{{ data.age }}</div>
       <div class="key">ID 号：</div>
       <div class="value">{{ data.inpNo }}</div>
+    </div>
+    <div flex="" class="table-line" v-else-if="HOSPITAL_ID == 'beihairenyi'">
+      <div class="key">年龄：</div>
+      <div class="value" style="width: 70px;">{{ data.age }}</div>
+      <div class="key">ID 号：</div>
+      <div class="value">{{ data.patientId }}</div>
     </div>
     <div flex="" class="table-line" v-else>
       <div class="key">年龄：</div>
