--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -117,7 +117,7 @@
     vertical-align: top;
     font-size: 14px;
     color: #687179;
-    z-index: 1;
+    z-index: 999;
 
     img {
       width: 18px;
@@ -125,6 +125,7 @@
       position: relative;
       top: 4px;
       margin-right: 5px;
+      margin-top: 45px;
     }
   }
 
