--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.html
@@ -44,6 +44,12 @@
           </div>
           <!-- </el-tooltip> -->
         </span>
+        <!-- 妇幼添加共享床位 -->
+        <span v-if="['fuyou'].includes(HOSPITAL_ID) && data && data.flagShare=='1'">
+          <div class="label-box" :style="{background: '#00CCFF'}">
+            <span>共</span>
+          </div>
+        </span>
       </div>
 
       <div class="patient-icon" v-if="HOSPITAL_ID === 'hj' &&  +data.registFlag === 1">
