【花都】床位一栏卡多重耐药颜色/归档入参更改

--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
@@ -62,7 +62,8 @@
                       'type-1': data.nursingClass == '一级护理',
                       'type-2': data.nursingClass == '二级护理',
                       'type-3': data.nursingClass == '三级护理',
-                      'type-4': data.nursingClass == '特级护理'
+                      'type-4': data.nursingClass == '特级护理',
+                      'type-5': data.nursingClass == '5',
                       }">
           <img src="../../../../../../common/images/card/默认头像.png" height="46" width="46" />
           <p>
