--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
@@ -177,7 +177,9 @@
   &.type-4 {
     background: #FF00FF;
   }
-
+  &.type-5 {
+    background: #FFD700;
+  }
   img {
     width: 46px;
     height: 46px;
