--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
@@ -17,7 +17,8 @@
                 :class="{red: data.formLowestStatus == 0, green: data.formLowestStatus == 1}"></span>
             </span>
             <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病重'">病重</span>
-            <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病危'">病危</span>
+              <span style="color:rgb(237, 85, 102)" v-if="data.patientCondition == '病危'">病危</span>
+            <span style="color:#5ec199" v-if="data.expand2=='出院'&&data.expand3=='Y'">预</span>
           </div>
           <div class="info">
             {{data.sex}} | {{data.age}} | {{data.patientId}} | {{data.chargeType
@@ -63,7 +64,7 @@
                       'type-2': data.nursingClass == '二级护理',
                       'type-3': data.nursingClass == '三级护理',
                       'type-4': data.nursingClass == '特级护理',
-                      'type-5': data.nursingClass == '5',
+                      'type-5': data.nursingClass == '多重耐药',
                       }">
           <img src="../../../../../../common/images/card/默认头像.png" height="46" width="46" />
           <p>
