--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.styl
@@ -317,6 +317,12 @@
   &.type-4
     border-color:rgb(255, 192, 203) transparent !important;
 
+.patient-icon
+  width 18px
+  height 18px
+  position absolute
+  top 10px
+  right 50px;
 
 .bed-modal
     width:240px;
