【花都】今结明出图片显示

--- a/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item-hd/bed-item.html
@@ -80,7 +80,7 @@
     </div>
   </span>
   <div class="patient-icon" v-if="data.expand2=='出院'&&data.expand3=='Y'">
-    <img style="width:48px" src="./img.png" alt="">
+    <img style="width:48px;opacity:0.5;" src="./img.png" alt="">
   </div>
   <div class="bed-modal">
     <div flex="" class="table-line" v-if="HOSPITAL_ID == 'huadu'">
