--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -249,7 +249,10 @@
   right 50px;
 
 .bed-modal
-  width: 240px;
+  //width: 240px;
+  // width: 250px;
+  min-width: 240px;
+  max-width: 258px;
   min-height: 300px;
   background: rgba(255, 248, 177, 1);
   border: 1px solid #A9A9A9;
