护记未签名红框

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -1,4 +1,7 @@
 .sheet-page-container, .sheet-excel-container, .sheet-page-container-neonatology {
+  .red-border {
+    border 2px solid red !important
+  }
   .icu_lc {
     input,textarea {
       font-size: 14px !important;
