【武警】护理记录单内容调整/禅道:4674

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -27,7 +27,9 @@
     .head-con {
       background: #f4f2f5;
     }
-
+    #bigFonstSize span{
+      font-size:14px;
+    }
     td, th {
       height: 30px;
       text-align: center;
