【武警】记录单调整

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -207,7 +207,9 @@
     &.mark-row-5 {
       background: rgba(80, 208, 101, 0.4);
     }
-
+    &.redBottom{
+      border-bottom:  2px solid red;
+    }
     &.redText {
       input, textarea  {
         color: red;
