【武警】护理记录单特殊情况字数修改

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -393,3 +393,52 @@
     transform: scale(0.8)
   }
 }
+
+.identification-first::after{
+  content: '';
+  background:url('../../../../images/left-top.png') no-repeat;
+  width:10px;
+  height:25px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  color:blue;
+  transform: translate(2px, -50%);
+}
+
+
+.identification-middle::after{
+  content: '';
+  background:url('../../../../images/left-middle.png') no-repeat;
+  position: absolute;
+  width:10px;
+  height:25px;
+  top: 50%;
+  right: 0;
+  color:blue;
+  transform: translate(2px, -50%);
+}
+
+.identification-last::after{
+  content: '';
+  background:url('../../../../images/left-last.png') no-repeat;
+  position: absolute;
+  width:10px;
+  height:25px;
+  top: 50%;
+  right: 0;
+  color:blue;
+  transform: translate(2px, -50%);
+}
+
+.identification-only-one:after{
+  content: '';
+  background:url('../../../../images/left-only.png') no-repeat;
+  position: absolute;
+  width:10px;
+  height:25px;
+  top: 50%;
+  right: 0;
+  color:blue;
+  transform: translate(2px, -50%);
+}
