【佛山杏坛】新增护理记录单（心血管呼吸专科）、危重症护理记录单

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -254,7 +254,7 @@
 
     .sh-name {
       position: absolute;
-      right: 0;
+      right: 150px;
       top: -10px;
       display: flex;
       align-items: center;
